tdf#167812 Calc in Dark mode: font dropdown shows white rectangles (GTK3)

regression from
    commit e0d4d178caff1414a9a21fa57f06bc8d4d2c389a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jan 13 15:03:05 2025 +0200
    Change alpha behavour of OutputDevice::SetFillColor

Change-Id: Ifa34c795d2f69b6ef258757073c89f73ca64041a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190004
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>